# dependabot-blackerror

./: pyproject.toml
.github/: dependabot.yml
