[tool.poetry]
name = "dependabot-blackerror"
version = "0.1.0"
description = ""
authors = ["Phillip Verheyden <pverheyden@gmail.com>"]
packages = [{include = "dependabot_blackerror"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
